<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<EditText
			android:id="@+id/editTextField1"
			android:inputType="numberDecimal|numberSigned"
			android:hint="@string/field1Hint"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			android:layout_marginTop="@dimen/margin_standard"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="@string/field1"/>

	<EditText
			android:id="@+id/editTextField2"
			android:inputType="numberDecimal|numberSigned"
			android:hint="@string/field2Hint"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_normal"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			app:layout_constraintTop_toBottomOf="@+id/editTextField1"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			tools:text="@string/field2"/>

	<RadioGroup
			android:id="@+id/operations"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginTop="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/editTextField2"
			app:layout_constraintStart_toStartOf="parent">

		<RadioButton
				android:id="@+id/plus"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/plus"
				android:layout_marginBottom="@dimen/margin_normal"
				tools:text="@string/operation"/>
		<RadioButton
				android:id="@+id/minus"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/minus"
				android:layout_marginBottom="@dimen/margin_normal"
				tools:text="@string/operation"/>
		<RadioButton
				android:id="@+id/divide"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/divide"
				android:layout_marginBottom="@dimen/margin_normal"
				tools:text="@string/operation"/>
		<RadioButton
				android:id="@+id/multiple"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/multiple"
				android:layout_marginBottom="@dimen/margin_normal"
				tools:text="@string/operation"/>
	</RadioGroup>

	<CheckBox
			android:id="@+id/floatValuesCheck"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checked="true"
			android:hint="@string/floatValuesHint"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginTop="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			app:layout_constraintTop_toBottomOf="@+id/operations"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			tools:text="@string/floatValues"/>

	<CheckBox
			android:id="@+id/signedValuesCheck"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/signedValuesHint"
			android:checked="true"
			tools:text="@string/signedValues"
			app:layout_constraintTop_toBottomOf="@+id/floatValuesCheck"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			android:layout_marginTop="@dimen/margin_normal"/>

	<TextView
			android:id="@+id/resultField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/resultFieldHint"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			android:layout_marginBottom="@dimen/margin_big"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/calculateButton"
			tools:text="@string/resultField"/>

	<Button
			android:id="@+id/calculateButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/calculateButtonHint"
			tools:text="@string/calculateButton"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			android:layout_marginBottom="@dimen/margin_big"/>

</android.support.constraint.ConstraintLayout>